workspace = { members = ["position_calcs"] }
[package]
name = "fm24_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.7.0"
htmler = "0.1.1"
position_calcs = { version = "0.1.0", path = "position_calcs" }
table-extract = "0.2.3"
text_io = "0.1.12"
